--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,20 +12,20 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/react-router-dom": "^5.3.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
     "antd": "^4.19.0",
     "axios": "^0.26.0",
     "echarts": "^5.3.1",
     "history": "^5.3.0",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-quill": "^1.3.5",
-    "source-map-explorer": "^2.5.2"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
@@ -52,6 +53,10 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@typescript-eslint/parser": "^5.24.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-react": "^7.29.4",
     "sass": "^1.49.9"
   }
 }
