--- a/package.json
+++ b/package.json
@@ -1,62 +1,32 @@
 {
-  "name": "my-app",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "@types/react-router-dom": "^5.3.3",
-    "antd": "^4.19.0",
-    "axios": "^0.26.0",
-    "echarts": "^5.3.1",
-    "history": "^5.3.0",
-    "mobx": "^6.4.2",
-    "mobx-react-lite": "^3.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-quill": "^1.3.5",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "source-map-explorer": "^2.5.2",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "antd": "^4.21.2",
+    "axios": "^0.27.2",
+    "history": "^5.3.0",
+    "mobx": "^6.6.0",
+    "mobx-react-lite": "^3.3.0",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.24.0",
-    "@typescript-eslint/parser": "^5.24.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4",
-    "sass": "^1.49.9"
+    "@types/node": "17.0.43",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "@types/react-router-dom": "^5.3.3",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.3"
   }
 }
