--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "4.7.3"
   }
 }
